docs/spec/v0.1.0/01-crypto.md
# zid-crypto Specification v0.1

## 1. Overview

The `zid-crypto` crate provides all cryptographic primitives for the Zero-Auth system. It is the most fundamental crate in the dependency hierarchy, with no internal dependencies on other Zero-Auth crates.

### 1.1 Purpose and Responsibilities

- **Key Generation**: Generate Neural Keys, PQ-Hybrid signing keys (Ed25519 + ML-DSA-65), X25519 encryption keys
- **Key Derivation**: Hierarchical key derivation using HKDF-SHA256 with domain separation
- **Encryption**: XChaCha20-Poly1305 AEAD encryption/decryption
- **Signatures**: PQ-Hybrid signing (Ed25519 + ML-DSA-65) and verification with canonical message formats
- **Hashing**: BLAKE3 for fast hashing, Argon2id for password hashing
- **Secret Sharing**: 3-of-5 Shamir Secret Sharing for Neural Key backup

### 1.2 Security Properties

- All sensitive material is zeroized after use via the `zeroize` crate
- Constant-time operations where applicable (signature verification, password comparison)
- No unsafe code (`#![forbid(unsafe_code)]`)
- Strict domain separation for all key derivations
- 192-bit nonces for XChaCha20 (collision-resistant for random generation)

### 1.3 Position in Dependency Graph

```mermaid
graph TD
    CRYPTO[zid-crypto]
    
    IDENTITY[zid-identity-core] --> CRYPTO
    SESSIONS[zid-sessions] --> CRYPTO
    METHODS[zid-methods] --> CRYPTO
    CLIENT[zid-client] --> CRYPTO
    
    style CRYPTO fill:#e1f5fe
```

---

## 2. Public Interface

### 2.1 Key Types

#### NeuralKey

The root cryptographic seed from which all identity keys are derived. This is the most sensitive key in the system.

```rust
/// 32-byte root secret with automatic zeroization
pub struct NeuralKey([u8; 32]);

impl NeuralKey {
    /// Generate a new Neural Key using cryptographically secure RNG
    /// Uses `getrandom` for WASM compatibility (crypto.getRandomValues in browsers)
    pub fn generate() -> Result<Self>;
    
    /// Create from existing bytes (e.g., after Shamir reconstruction)
    /// Input bytes are zeroized after copying
    pub fn from_bytes(bytes: [u8; 32]) -> Self;
    
    /// Get a reference to the key bytes
    /// WARNING: Use with extreme caution. Never log or persist.
    pub fn as_bytes(&self) -> &[u8; 32];
    
    /// Validate that the Neural Key has sufficient entropy
    pub fn validate_entropy(&self) -> Result<()>;
}
```

**Security Requirements:**
- MUST be generated client-side only
- MUST NEVER be transmitted over network
- MUST NEVER be stored whole on any system
- MUST be protected via Shamir Secret Sharing
- MUST be zeroized immediately after use

#### IdentitySigningKey

PQ-Hybrid signing key derived from NeuralKey via HKDF. Produces `HybridSignature` (Ed25519 + ML-DSA-65).

```rust
pub struct IdentitySigningKey {
    ed25519_key: SigningKey,      // 32-byte seed, zeroized on drop
    ml_dsa_key: MlDsaKeyPair,    // ML-DSA-65 key pair
}

impl IdentitySigningKey {
    pub fn from_seeds(ed_seed: &[u8; 32], pq_seed: &[u8; 32]) -> Result<Self>;
    pub fn verifying_key(&self) -> IdentityVerifyingKey;
    pub fn sign(&self, message: &[u8]) -> HybridSignature;
}
```

#### IdentityVerifyingKey

```rust
pub struct IdentityVerifyingKey {
    ed25519_key: VerifyingKey,    // 32 bytes
    ml_dsa_key: Vec<u8>,         // 1952 bytes (ML-DSA-65 public key)
}
// Total: 1984 bytes (32 + 1952)

impl IdentityVerifyingKey {
    pub fn verify(&self, message: &[u8], signature: &HybridSignature) -> Result<()>;
    pub fn to_bytes(&self) -> Vec<u8>;
    pub fn from_bytes(bytes: &[u8]) -> Result<Self>;
}
```

#### HybridSignature

```rust
pub struct HybridSignature {
    ed25519_sig: [u8; 64],       // Ed25519 signature
    ml_dsa_sig: Vec<u8>,         // 3309 bytes (ML-DSA-65 signature)
}
// Total: 3373 bytes (64 + 3309)

impl HybridSignature {
    pub fn to_bytes(&self) -> Vec<u8>;
    pub fn from_bytes(bytes: &[u8]) -> Result<Self>;
}
```

#### X25519KeyPair

X25519 encryption key pair for key agreement (Diffie-Hellman).

```rust
pub struct X25519KeyPair {
    private_key: StaticSecret,  // 32 bytes, zeroized on drop
    public_key: PublicKey,      // 32 bytes
}

impl X25519KeyPair {
    /// Generate from a 32-byte seed
    pub fn from_seed(seed: &[u8; 32]) -> Result<Self>;
    
    /// Get the public key bytes
    pub fn public_key_bytes(&self) -> [u8; 32];
    
    /// Perform Diffie-Hellman key agreement
    pub fn diffie_hellman(&self, their_public: &PublicKey) -> [u8; 32];
}
```

#### MachineKeyPair

Full PQ-Hybrid key set: Ed25519 + ML-DSA-65 for signing, X25519 + ML-KEM-768 for encryption.

```rust
pub struct MachineKeyPair {
    ed25519_signing_key: SigningKey,
    ml_dsa_signing_key: MlDsaKeyPair,
    x25519_encryption_key: X25519KeyPair,
    ml_kem_key: MlKemKeyPair,
    capabilities: MachineKeyCapabilities,
}

impl MachineKeyPair {
    pub fn from_seeds(
        signing_seed: &[u8; 32],
        encryption_seed: &[u8; 32],
        pq_signing_seed: &[u8; 32],
        pq_kem_seed: &[u8; 64],
        capabilities: MachineKeyCapabilities,
    ) -> Result<Self>;
    
    pub fn public_key(&self) -> MachinePublicKey;
    pub fn sign(&self, message: &[u8]) -> HybridSignature;
    pub fn capabilities(&self) -> MachineKeyCapabilities;
}
```

#### MachinePublicKey

```rust
pub struct MachinePublicKey {
    ed25519_key: VerifyingKey,          // 32 bytes
    ml_dsa_key: Vec<u8>,               // 1952 bytes
    x25519_key: x25519_dalek::PublicKey, // 32 bytes
    ml_kem_key: Vec<u8>,               // 1184 bytes
}

impl MachinePublicKey {
    pub fn verify(&self, message: &[u8], signature: &HybridSignature) -> Result<()>;
}
```

Classical keys are always present for backward compatibility with OpenMLS and existing systems. The PQ keys provide additional protection against quantum threats.

#### MachineKeyCapabilities

Bitflags defining what cryptographic operations a machine key can perform. These are stored with the machine key and define its functional capabilities.

> **Note**: These are distinct from the policy operation requirements in `zid-policy`, which define what permissions are needed to perform specific API operations. Machine key capabilities are about what the key *can do*; policy capabilities are about what's *required* for an operation.

```rust
bitflags! {
    pub struct MachineKeyCapabilities: u32 {
        const AUTHENTICATE     = 0b00000001;  // Can authenticate to zid
        const SIGN             = 0b00000010;  // Can sign challenges
        const ENCRYPT          = 0b00000100;  // Can encrypt/decrypt
        const SVK_UNWRAP       = 0b00001000;  // Can unwrap vault keys
        const MLS_MESSAGING    = 0b00010000;  // Can participate in MLS groups
        const VAULT_OPERATIONS = 0b00100000;  // Can access zero-vault
        
        // Preset combinations
        const FULL_DEVICE     = 0b00111111;  // All capabilities
        const SERVICE_MACHINE = 0b00100011;  // AUTHENTICATE | SIGN | VAULT_OPERATIONS
        const LIMITED_DEVICE  = 0b00010011;  // AUTHENTICATE | SIGN | MLS_MESSAGING
    }
}
```

### 2.2 Key Derivation Functions

All key derivations use HKDF-SHA256 with domain separation strings.

```rust
/// Generic HKDF derivation
pub fn hkdf_derive(ikm: &[u8], info: &[u8], output_len: usize) -> Result<Vec<u8>>;

/// Fixed 32-byte output HKDF
pub fn hkdf_derive_32(ikm: &[u8], info: &[u8]) -> Result<[u8; 32]>;

/// Derive Identity Signing Keypair from Neural Key (PQ-Hybrid)
/// Domain: "cypher:id:identity:v1" || identity_id
pub fn derive_identity_signing_keypair(
    neural_key: &NeuralKey,
    identity_id: &Uuid,
) -> Result<(IdentityVerifyingKey, IdentitySigningKey)>;

/// Derive Machine Key seed
/// Domain: "cypher:shared:machine:v1" || identity_id || machine_id || epoch
pub fn derive_machine_seed(
    neural_key: &NeuralKey,
    identity_id: &Uuid,
    machine_id: &Uuid,
    epoch: u64,
) -> Result<Zeroizing<[u8; 32]>>;

/// Derive Machine signing seed from machine seed
/// Domain: "cypher:shared:machine:sign:v1" || machine_id
pub fn derive_machine_signing_seed(
    machine_seed: &[u8; 32],
    machine_id: &Uuid,
) -> Result<Zeroizing<[u8; 32]>>;

/// Derive Machine encryption seed from machine seed
/// Domain: "cypher:shared:machine:encrypt:v1" || machine_id
pub fn derive_machine_encryption_seed(
    machine_seed: &[u8; 32],
    machine_id: &Uuid,
) -> Result<Zeroizing<[u8; 32]>>;

/// High-level: Derive complete Machine Key pair
pub fn derive_machine_keypair(
    neural_key: &NeuralKey,
    identity_id: &Uuid,
    machine_id: &Uuid,
    epoch: u64,
    capabilities: MachineKeyCapabilities,
) -> Result<MachineKeyPair>;

/// Derive JWT signing key seed
/// Domain: "cypher:id:jwt:v1" || key_epoch
pub fn derive_jwt_signing_seed(
    service_master_key: &[u8; 32],
    key_epoch: u64,
) -> Result<Zeroizing<[u8; 32]>>;
```

### 2.3 Encryption Functions

All encryption uses XChaCha20-Poly1305 AEAD.

```rust
/// Encrypt with XChaCha20-Poly1305
/// Returns ciphertext with 16-byte auth tag appended
pub fn encrypt(
    key: &[u8; 32],
    plaintext: &[u8],
    nonce: &[u8; 24],
    aad: &[u8],
) -> Result<Vec<u8>>;

/// Decrypt with XChaCha20-Poly1305
pub fn decrypt(
    key: &[u8; 32],
    ciphertext: &[u8],
    nonce: &[u8; 24],
    aad: &[u8],
) -> Result<Vec<u8>>;

/// Encrypt JWT signing key private key
pub fn encrypt_jwt_signing_key(
    service_master_key: &[u8; 32],
    private_key: &[u8; 32],
    nonce: &[u8; 24],
    key_id: &[u8; 16],
    epoch: u64,
) -> Result<Vec<u8>>;

/// Decrypt JWT signing key private key
pub fn decrypt_jwt_signing_key(
    service_master_key: &[u8; 32],
    ciphertext: &[u8],
    nonce: &[u8; 24],
    key_id: &[u8; 16],
    epoch: u64,
) -> Result<Vec<u8>>;
```

### 2.4 Signature Functions

Signing and verification are performed via methods on the key types:

```rust
// Identity signing (via IdentitySigningKey)
let signature: HybridSignature = identity_signing_key.sign(message);

// Identity verification (via IdentityVerifyingKey)
identity_verifying_key.verify(message, &signature)?;

// Machine signing (via MachineKeyPair)
let signature: HybridSignature = machine_keypair.sign(message);

// Machine verification (via MachinePublicKey)
machine_public_key.verify(message, &signature)?;
```

#### Canonical Message Formats

```rust
/// Canonicalize identity creation message (137 bytes)
pub fn canonicalize_identity_creation_message(
    identity_id: &Uuid,
    identity_signing_public_key: &[u8; 32],
    first_machine_id: &Uuid,
    machine_signing_key: &[u8; 32],
    machine_encryption_key: &[u8; 32],
    created_at: u64,
) -> [u8; 137];

/// Canonicalize machine enrollment message (109 bytes)
pub fn canonicalize_enrollment_message(
    machine_id: &Uuid,
    namespace_id: &Uuid,
    signing_public_key: &[u8; 32],
    encryption_public_key: &[u8; 32],
    capabilities: u32,
    created_at: u64,
) -> [u8; 109];

/// Canonicalize recovery approval message (73 bytes)
pub fn canonicalize_recovery_approval_message(
    identity_id: &Uuid,
    recovery_machine_id: &Uuid,
    recovery_signing_key: &[u8; 32],
    timestamp: u64,
) -> [u8; 73];

/// Canonicalize rotation approval message (57 bytes)
pub fn canonicalize_rotation_approval_message(
    identity_id: &Uuid,
    new_identity_signing_public_key: &[u8; 32],
    timestamp: u64,
) -> [u8; 57];

/// Canonicalize challenge for signing (130 bytes)
pub fn canonicalize_challenge(challenge: &Challenge) -> [u8; 130];
```

### 2.5 Hashing Functions

```rust
/// Hash data using BLAKE3 (fast, non-cryptographic use)
pub fn blake3_hash(data: &[u8]) -> [u8; 32];

/// Derive key ID from public key (first 16 bytes of BLAKE3 hash)
pub fn derive_key_id(public_key: &[u8; 32]) -> [u8; 16];

/// Hash password with Argon2id
pub fn hash_password(password: &[u8], salt: &SaltString) -> Result<String>;

/// Verify password against Argon2id hash
pub fn verify_password(password: &[u8], hash_str: &str) -> Result<()>;

/// Generate random salt for password hashing
pub fn generate_salt() -> SaltString;

/// Constant-time byte comparison
pub fn constant_time_compare(a: &[u8], b: &[u8]) -> bool;
```

### 2.6 Shamir Secret Sharing

```rust
/// A Neural Shard - one share of a split Neural Key
pub struct NeuralShard {
    pub index: u8,        // 1-255 (we use 1-5)
    pub data: [u8; 32],   // Same length as secret
}

impl NeuralShard {
    pub fn new(index: u8, data: [u8; 32]) -> Self;
    pub fn to_hex(&self) -> String;           // 66 hex chars
    pub fn from_hex(hex_str: &str) -> Result<Self>;
    pub fn to_bytes(&self) -> Vec<u8>;        // 33 bytes
    pub fn from_bytes(bytes: &[u8]) -> Result<Self>;
}

/// Split Neural Key into 5 shards (3-of-5 threshold)
pub fn split_neural_key(neural_key: &NeuralKey) -> Result<[NeuralShard; 5]>;

/// Combine 3-5 shards to reconstruct Neural Key
pub fn combine_shards(shards: &[NeuralShard]) -> Result<NeuralKey>;
```

### 2.7 Utility Functions

```rust
/// Generate cryptographically random nonce (24 bytes)
pub fn generate_nonce() -> Result<[u8; 24]>;

/// Generate challenge nonce (32 bytes)
pub fn generate_challenge_nonce() -> Result<[u8; 32]>;

/// Get current Unix timestamp in seconds
pub fn current_timestamp() -> u64;
```

### 2.8 Types

#### Challenge

```rust
pub struct Challenge {
    pub challenge_id: Uuid,
    pub entity_id: Uuid,
    pub entity_type: EntityType,
    pub purpose: String,
    pub aud: String,
    pub iat: u64,
    pub exp: u64,
    pub nonce: [u8; 32],
    pub used: bool,
}

#[repr(u8)]
pub enum EntityType {
    Machine = 0x01,
    Wallet = 0x02,
    Email = 0x03,
}
```

### 2.9 Error Types

```rust
pub enum CryptoError {
    InvalidKeySize { expected: usize, actual: usize },
    InvalidNonceSize { expected: usize, actual: usize },
    InvalidSignature,
    SignatureVerificationFailed,
    EncryptionFailed(String),
    DecryptionFailed(String),
    KeyDerivationFailed(String),
    InvalidInput(String),
    RandomGenerationFailed(String),
    Argon2Failed(String),
    InvalidHashFormat,
    Ed25519Error(String),
    X25519Error(String),
    HkdfError,
    SerializationError(String),
    DeserializationError(String),
    ShamirSplitFailed(String),
    ShamirCombineFailed(String),
    InsufficientShards { required: usize, provided: usize },
    TooManyShards { maximum: usize, provided: usize },
    DuplicateShardIndex(u8),
    InvalidShardFormat(String),
}

pub type Result<T> = std::result::Result<T, CryptoError>;
```

---

## 3. State Machines

### 3.1 Neural Key Lifecycle

```mermaid
stateDiagram-v2
    [*] --> Generated: NeuralKey::generate()
    Generated --> Validated: validate_entropy()
    Validated --> Split: split_neural_key()
    Split --> Distributed: Shards sent to custodians
    
    Distributed --> Collecting: Recovery initiated
    Collecting --> Reconstructed: combine_shards() with 3+ shards
    Reconstructed --> InUse: Key derivation operations
    InUse --> Zeroized: Drop / explicit zeroize
    Zeroized --> [*]
    
    note right of Generated
        32 bytes from CSRNG
    end note
    
    note right of Split
        5 shards generated
        3-of-5 threshold
    end note
```

### 3.2 Machine Key Derivation Flow

```mermaid
stateDiagram-v2
    [*] --> NeuralKeyReady
    
    NeuralKeyReady --> MachineSeedDerived: derive_machine_seed()
    MachineSeedDerived --> SigningSeedDerived: derive_machine_signing_seed()
    MachineSeedDerived --> EncryptionSeedDerived: derive_machine_encryption_seed()
    
    SigningSeedDerived --> Ed25519Created: Ed25519 from seed
    EncryptionSeedDerived --> X25519Created: X25519KeyPair.from_seed()
    
    Ed25519Created --> MachineKeyPairReady
    X25519Created --> MachineKeyPairReady
    
    MachineKeyPairReady --> [*]
```

---

## 4. Control Flow

### 4.1 Key Derivation Hierarchy

```mermaid
sequenceDiagram
    participant Client
    participant Crypto as zid-crypto
    
    Note over Client: Identity Creation
    Client->>Crypto: NeuralKey::generate()
    Crypto-->>Client: NeuralKey (32 bytes)
    
    Client->>Crypto: derive_identity_signing_keypair(neural_key, identity_id)
    Note over Crypto: HKDF("cypher:id:identity:v1" || identity_id)
    Crypto-->>Client: (IdentityVerifyingKey, IdentitySigningKey)
    
    Note over Client: Machine Enrollment
    Client->>Crypto: derive_machine_keypair(neural_key, identity_id, machine_id, epoch, caps)
    Note over Crypto: Step 1: derive_machine_seed()
    Note over Crypto: HKDF("cypher:shared:machine:v1" || identity_id || machine_id || epoch)
    Note over Crypto: Step 2: derive_machine_signing_seed()
    Note over Crypto: HKDF("cypher:shared:machine:sign:v1" || machine_id)
    Note over Crypto: Step 3: derive_machine_encryption_seed()
    Note over Crypto: HKDF("cypher:shared:machine:encrypt:v1" || machine_id)
    Crypto-->>Client: MachineKeyPair
```

### 4.2 Challenge-Response Authentication

```mermaid
sequenceDiagram
    participant Server
    participant Crypto as zid-crypto
    participant Client
    
    Server->>Crypto: generate_challenge_nonce()
    Crypto-->>Server: nonce (32 bytes)
    Server->>Server: Create Challenge struct
    Server-->>Client: Challenge
    
    Client->>Crypto: canonicalize_challenge(challenge)
    Crypto-->>Client: canonical_bytes (130 bytes)
    Client->>Crypto: machine_keypair.sign(canonical_bytes)
    Crypto-->>Client: HybridSignature (3373 bytes)
    Client-->>Server: signature
    
    Server->>Crypto: canonicalize_challenge(challenge)
    Crypto-->>Server: canonical_bytes
    Server->>Crypto: machine_public_key.verify(canonical_bytes, signature)
    alt Valid
        Crypto-->>Server: Ok(())
    else Invalid
        Crypto-->>Server: Err(SignatureVerificationFailed)
    end
```

### 4.3 Neural Key Recovery

```mermaid
sequenceDiagram
    participant User
    participant Crypto as zid-crypto
    participant Custodians
    
    Note over User: Backup (during identity creation)
    User->>Crypto: split_neural_key(neural_key)
    Crypto-->>User: [NeuralShard; 5]
    loop For each shard
        User->>User: shard.to_hex()
        User-->>Custodians: Distribute shard
    end
    
    Note over User: Recovery (when needed)
    loop Collect 3+ shards
        Custodians-->>User: shard_hex
        User->>Crypto: NeuralShard::from_hex(shard_hex)
        Crypto-->>User: NeuralShard
    end
    User->>Crypto: combine_shards(shards)
    alt 3+ valid shards
        Crypto-->>User: NeuralKey
    else < 3 shards
        Crypto-->>User: Err(InsufficientShards)
    end
```

---

## 5. Data Structures

### 5.1 Binary Message Formats

All multi-byte integers use **big-endian** (network byte order).

#### Identity Creation Authorization (137 bytes)

| Offset | Size | Field | Description |
|--------|------|-------|-------------|
| 0 | 1 | version | Protocol version (0x01) |
| 1 | 16 | identity_id | UUID bytes |
| 17 | 32 | identity_signing_public_key | Ed25519 public key |
| 49 | 16 | first_machine_id | UUID bytes |
| 65 | 32 | machine_signing_key | Ed25519 public key |
| 97 | 32 | machine_encryption_key | X25519 public key |
| 129 | 8 | created_at | Unix timestamp (big-endian u64) |

#### Machine Enrollment Authorization (109 bytes)

| Offset | Size | Field | Description |
|--------|------|-------|-------------|
| 0 | 1 | version | Protocol version (0x01) |
| 1 | 16 | machine_id | UUID bytes |
| 17 | 16 | namespace_id | UUID bytes |
| 33 | 32 | signing_public_key | Ed25519 public key |
| 65 | 32 | encryption_public_key | X25519 public key |
| 97 | 4 | capabilities | Capability bitflags (big-endian u32) |
| 101 | 8 | created_at | Unix timestamp (big-endian u64) |

#### Recovery Approval (73 bytes)

| Offset | Size | Field | Description |
|--------|------|-------|-------------|
| 0 | 1 | version | Protocol version (0x01) |
| 1 | 16 | identity_id | UUID bytes |
| 17 | 16 | recovery_machine_id | UUID bytes |
| 33 | 32 | recovery_signing_key | Ed25519 public key |
| 65 | 8 | timestamp | Unix timestamp (big-endian u64) |

#### Neural Key Rotation Approval (57 bytes)

| Offset | Size | Field | Description |
|--------|------|-------|-------------|
| 0 | 1 | version | Protocol version (0x01) |
| 1 | 16 | identity_id | UUID bytes |
| 17 | 32 | new_identity_signing_public_key | New Ed25519 public key |
| 49 | 8 | timestamp | Unix timestamp (big-endian u64) |

#### Challenge Canonical Format (130 bytes)

| Offset | Size | Field | Description |
|--------|------|-------|-------------|
| 0 | 1 | version | Protocol version (0x01) |
| 1 | 16 | challenge_id | UUID bytes |
| 17 | 16 | entity_id | UUID bytes |
| 33 | 1 | entity_type | 0x01=Machine, 0x02=Wallet, 0x03=Email |
| 34 | 16 | purpose | Zero-padded UTF-8 |
| 50 | 32 | aud | Zero-padded UTF-8 |
| 82 | 8 | iat | Issued-at timestamp (big-endian u64) |
| 90 | 8 | exp | Expiry timestamp (big-endian u64) |
| 98 | 32 | nonce | Random bytes |

### 5.2 Neural Shard Format (33 bytes)

| Offset | Size | Field | Description |
|--------|------|-------|-------------|
| 0 | 1 | index | Shard index (1-255, typically 1-5) |
| 1 | 32 | data | Shard data |

Hex encoding: 66 characters (2 chars per byte)

---

## 6. Security Considerations

### 6.1 Cryptographic Requirements

| Requirement | Implementation |
|-------------|----------------|
| Key size | 256 bits (32 bytes) for all symmetric keys |
| Signature size | 3373 bytes hybrid (Ed25519 64B + ML-DSA-65 3309B) |
| Nonce size | 192 bits (24 bytes) for XChaCha20 |
| Auth tag size | 128 bits (16 bytes) for Poly1305 |
| Password hash | Argon2id: 64 MiB memory, 3 iterations |
| Secret sharing | 3-of-5 Shamir over GF(256) |

### 6.2 Domain Separation

All domain strings follow the format: `cypher:{service}:{purpose}:v{version}`

| Domain String | Purpose |
|---------------|---------|
| `cypher:id:identity:v1` | Identity Signing Key derivation |
| `cypher:shared:machine:v1` | Machine seed derivation |
| `cypher:shared:machine:sign:v1` | Machine signing key derivation |
| `cypher:shared:machine:encrypt:v1` | Machine encryption key derivation |
| `cypher:id:jwt:v1` | JWT signing key derivation |

### 6.3 Validation Rules

1. **Neural Key Entropy**: Must not be all zeros or single repeated byte
2. **Nonce Uniqueness**: Each nonce MUST be unique per key (random generation provides statistical uniqueness)
3. **Shard Indices**: Must be non-zero and unique when combining
4. **Timestamps**: All timestamps are Unix seconds in big-endian format

### 6.4 Zeroization

The following types implement `Zeroize` and `ZeroizeOnDrop`:
- `NeuralKey` — Explicitly zeroizes internal buffer
- `IdentitySigningKey` — Zeroizes Ed25519 and ML-DSA key material
- `MachineKeyPair` — Zeroizes all classical and PQ key material
- `X25519KeyPair` — Via `x25519-dalek` StaticSecret
- All `Zeroizing<T>` wrappers for derived seeds

### 6.5 Threat Mitigations

| Threat | Mitigation |
|--------|------------|
| Key extraction from memory | Zeroization on drop |
| Timing attacks | Constant-time signature verification, constant-time compare |
| Nonce reuse | 192-bit random nonces (birthday bound at 2^96) |
| Rainbow tables | Argon2id with random salt |
| Single point of failure | 3-of-5 Shamir for Neural Key |

---

## 7. Dependencies

### 7.1 Internal Crate Dependencies

None. This is the foundational crate.

### 7.2 External Dependencies

| Crate | Version | Purpose |
|-------|---------|---------|
| `chacha20poly1305` | workspace | XChaCha20-Poly1305 AEAD |
| `hkdf` | workspace | HKDF-SHA256 key derivation |
| `sha2` | workspace | SHA-256 for HKDF |
| `ed25519-dalek` | workspace | Ed25519 signatures |
| `x25519-dalek` | workspace | X25519 key agreement |
| `blake3` | workspace | Fast hashing |
| `argon2` | workspace | Password hashing |
| `zeroize` | workspace | Secure memory clearing |
| `rand` | workspace | Random number generation utilities |
| `getrandom` | workspace | WASM-compatible CSPRNG |
| `sharks` | workspace | Shamir Secret Sharing |
| `serde` | workspace | Serialization |
| `hex` | workspace | Hex encoding |
| `uuid` | workspace | UUID handling |
| `thiserror` | workspace | Error types |
| `bitflags` | workspace | Capability flags |

**Note:** Random number generation uses `getrandom` directly for WASM compatibility. In browser environments, this uses `crypto.getRandomValues()`. The `rand` crate is still used for `OsRng` in password salt generation.

---

## 8. Constants Reference

```rust
// Key sizes
pub const NEURAL_KEY_SIZE: usize = 32;
pub const PUBLIC_KEY_SIZE: usize = 32;
pub const PRIVATE_KEY_SIZE: usize = 32;
pub const SIGNATURE_SIZE: usize = 64;

// Encryption
pub const NONCE_SIZE: usize = 24;
pub const TAG_SIZE: usize = 16;

// Hashing
pub const HKDF_OUTPUT_SIZE: usize = 32;
pub const ARGON2_SALT_SIZE: usize = 32;

// Challenges
pub const CHALLENGE_NONCE_SIZE: usize = 32;
pub const CHALLENGE_EXPIRY_SECONDS: u64 = 60;

// Sessions
pub const SESSION_TOKEN_EXPIRY_SECONDS: u64 = 900;      // 15 minutes
pub const REFRESH_TOKEN_EXPIRY_SECONDS: u64 = 2_592_000; // 30 days

// Ceremonies
pub const APPROVAL_EXPIRY_SECONDS: u64 = 900;   // 15 minutes
pub const OPERATION_EXPIRY_SECONDS: u64 = 3600; // 1 hour

// Shamir
pub const SHAMIR_THRESHOLD: usize = 3;
pub const SHAMIR_TOTAL_SHARES: usize = 5;

// Argon2id parameters
pub mod argon2_params {
    pub const MEMORY_COST: u32 = 64 * 1024;  // 64 MiB
    pub const TIME_COST: u32 = 3;             // 3 iterations
    pub const PARALLELISM: u32 = 1;           // 1 thread
    pub const OUTPUT_LENGTH: usize = 32;      // 32 bytes
}
```
